# ghc-stm-benchmarks

benchmarks/DAMP-LL/: CASLL.hs  DissectedSTM.hs  LockCoupling.hs  Main.hs  Makefile  RBTreeSTMTrie.hs  RBTreeThroughput.cabal  StraightForwardSTM.hs  build.sh  run-multiple.sh  test-mix-thread.sh
benchmarks/DAMP-LL/linked-list/: 10-reads1.txt  10-reads2.txt  10-reads3.txt  10-reads4.txt  10-reads5.txt  50-reads1.txt  50-reads2.txt  50-reads3.txt  50-reads4.txt  50-reads5.txt  90-reads1.txt  90-reads2.txt  90-reads3.txt  90-reads4.txt  90-reads5.txt  cas-10-reads1.txt  cas-10-reads2.txt  cas-10-reads3.txt  cas-10-reads4.txt  cas-10-reads5.txt  cas-50-reads1.txt  cas-50-reads2.txt  cas-50-reads3.txt  cas-50-reads4.txt  cas-50-reads5.txt  cas-90-reads1.txt  cas-90-reads2.txt  cas-90-reads3.txt  cas-90-reads4.txt  cas-90-reads5.txt
benchmarks/DAMP-LL/rbtree/: 10-reads1.txt  10-reads2.txt  10-reads3.txt  10-reads4.txt  10-reads5.txt  50-reads1.txt  50-reads2.txt  50-reads3.txt  50-reads4.txt  50-reads5.txt  90-reads1.txt  90-reads2.txt  90-reads3.txt  90-reads4.txt  90-reads5.txt
benchmarks/DAMP-LL/rbtree/wip-compiler/: 10-reads1.txt  10-reads2.txt  10-reads3.txt  10-reads4.txt  10-reads5.txt  50-reads1.txt  50-reads2.txt  50-reads3.txt  50-reads4.txt  50-reads5.txt  90-reads1.txt  90-reads2.txt  90-reads3.txt  (+2 more)
benchmarks/DAMP-LL/stmtrie/: 10-reads1.txt  10-reads2.txt  10-reads3.txt  10-reads4.txt  10-reads5.txt  50-reads1.txt  50-reads2.txt  50-reads3.txt  50-reads4.txt  50-reads5.txt  90-reads1.txt  90-reads2.txt  90-reads3.txt  90-reads4.txt  90-reads5.txt
(+40 files in other folders)
